Solved chart heights overflow issue.

--- a/client/app/dashboard2/dashboard2.less
+++ b/client/app/dashboard2/dashboard2.less
@@ -189,7 +189,7 @@
   justify-content: space-between;
   -webkit-justify-content: space-between;
 
-  background: lightcoral;
+//  background: lightcoral;
 }
 
 #privileges-chart {
